--- a/Aquaculture/Packages/manifest.json
+++ b/Aquaculture/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.toolchain.macos-arm64-linux-x86_64": "2.0.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.2",
+    "com.unity.xr.interaction.toolkit": "2.5.4",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
